# Optimizing_XGboost

./: .gitlab-ci.yml  README.md
XGBoost/: CMakeLists.txt  classifier.c  classifier.h  config.h  inputreader.c  inputreader.h  main.c  matrix_helpers.c  matrix_helpers.h  sort.c  sort.h  split.c  split.h  tree.c  tree.h
XGBoost/bench/: bench_main.c
XGBoost/test/: pseudorandom.cpp  pseudorandom.h  test_main.cpp  test_sort.cpp  test_splitfinding.cpp  test_tree.cpp  transformers.cpp  transformers.h
XGBoost/test/data/: multiple_tree_exact_greedy_100k.json  multiple_tree_exact_greedy_10k.json  multiple_tree_exact_greedy_50k.json  one_tree_exact_greedy_10k.json
performance/: my_plot.py  perf2.py
python/amory/: config.py  input.json  testwriter.py  xgboost.py
python/noman/: app.py  conf.py  testwriter.py  tree.py
